Fix cards' properties horizontal scroll
Sometimes quill components take too much width if it contains a very
long text line. This was already fix in a previous commit but it had to
be adjusted for the new ngx-srollbar version.

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -168,7 +168,7 @@ td.mat-column-usageCount {
 }
 
 .ng-scroll-content {
-    width: 100%;
+    width: 100% !important;
 }
 
 .ng-scrollbar-wrapper,
